# rustixml

./: .gitignore  ANNOUNCEMENT_TEMPLATES.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.debug  Dockerfile.test  GITHUB_RELEASE_NOTES.md  KNOWN_ISSUES.md  LICENSE-MIT  NPM_README.md  PRE_PUBLIC_CHECKLIST.md  PROGRESS.md  QUOTE_HANDLING_DESIGN.md  README.md  RELEASE_v0.2.0.md  conformance_results.txt  conformance_results_new.txt  debug_arith.rs  minimal_star_test.rs  package.json  star_test_debug.rs  test_arith.rs  test_line33_full.rs  test_lines.rs  test_native_basic.rs  test_repetition.rs  test_runner.rs  test_unicode_2lines.rs  test_unicode_31_35.rs  test_unicode_classes.rs  test_unicode_line33.rs
.aikit/emergence/: log.json
.aikit/patterns/backup/: patterns-2025-11-18T20-44-41-735Z.json  patterns-2025-11-18T20-44-41-916Z.json  patterns-2025-11-18T20-44-41-972Z.json  patterns-2025-11-18T20-44-41-974Z.json  patterns-2025-11-18T20-44-41-977Z.json  patterns-2025-11-19T13-58-43-605Z.json  patterns-2025-11-19T13-58-44-749Z.json  patterns-2025-11-19T13-58-44-759Z.json  patterns-2025-11-19T13-58-44-764Z.json  patterns-2025-11-19T14-34-00-018Z.json  patterns-2025-11-19T14-34-00-608Z.json  patterns-2025-11-19T14-34-00-635Z.json  patterns-2025-11-19T14-34-00-643Z.json
.claude/: settings.local.json
.claude/hooks/: config.env  user_prompt_submit.py
.gitforai/vectordb/: chroma.sqlite3
.github/workflows/: ci.yml  release.yml  wasm.yml
docs/: ABSTRACTION_ANALYSIS.md  AMBIGUITY_DETECTION_STRATEGY.md  AMBIGUITY_TRACKING_ANALYSIS.md  ARCHITECTURE.md  CLAUDE_HISTORICAL.md  FILE-PROTOCOL-LIMITATION.md  GRAMMAR_ANALYSIS_STATUS.md  HTMZ-README.md  IMPLEMENTATION_CHECKLIST.md  LEFT_RECURSION_ANALYSIS.md  LEFT_RECURSION_CHALLENGE.md  NATIVE_INTERPRETER_DESIGN.md  NATIVE_PARSER_STATUS.md  NATIVE_PROGRESS_REPORT.md  NORMALIZATION_LESSONS.md  NORMALIZATION_STRATEGY.md  PARSER_COMPARISON.md  PUBLIC_RELEASE_PLAN.md  README.md  SEED_GROWING_IMPLEMENTATION.md  STRATEGY_OPTIONS.md  STRATEGY_SUMMARY.txt  TRANSITION_SUMMARY.md  WASMZ-PATTERN.md  WASM_INTEGRATION_PLAN.md  WASM_SUMMARY.md  charclass_fix_summary.md  earley_insertion_limitation.md  failing_tests_analysis.md  index.html  rustixml_bg.wasm  semantic_comparison_summary.md  test-cases.json  test_breakdown.txt
docs/rustlr/: ixml_parser_architecture_research.md  parser_quick_reference.md  rustlr_migration_guide.md
docs/www/: index.html  wasmz.html
examples/: basic_usage.rs
scripts/: generate_test_cases.py
src/: ast.rs  charclass.rs  grammar.rs  grammar_analysis.rs  grammar_ast.rs  grammar_parser.rs  grammar_v2.rs  input_stream.rs  lexer.rs  lib.rs  native_parser.rs  normalize.rs  parse_context.rs  runtime_parser.rs  testsuite_utils.rs  wasm.rs  working_test.rs  xml_node.rs
www/: FILE-PROTOCOL-LIMITATION.md  HTMZ-README.md  htmz-standalone.html  index.html  rustixml.js  wasmz.html
