[package]
name = "rustixml"
version = "0.2.0"
edition = "2021"
authors = ["Alex Everitt <bigale@netzero.net>"]
description = "Native iXML (Invisible XML) parser - 83.7% spec conformance, works in Rust and WebAssembly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bigale/rustixml"
keywords = ["parser", "xml", "ixml", "invisible-xml", "wasm"]
categories = ["parsing", "text-processing", "wasm"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unicode-general-category = "1.0"

# WASM-specific dependencies (only when building for wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[[bin]]
name = "ixml"
path = "src/bin/main.rs"
doc = false

[[bin]]
name = "conformance_test"
path = "src/bin/native_conformance_runner.rs"
doc = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = "z"
